--- a/config/west.yml
+++ b/config/west.yml
@@ -6,8 +6,8 @@ manifest:
       url-base: https://github.com/refil
   projects:
     - name: zmk
-      remote: refil
-      revision: adv360-z3.2-2
+      remote: urob
+      revision: main
       import: app/west.yml
   self:
     path: config
